# clusterer_lite

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.cache/clangd/index/: burda_hit.cpp.F582D8B9EB062218.idx  burda_hit.h.5087ABC132D4C50B.idx  burda_to_mm_hit_adapter.h.BF14610BAC630514.idx  calibration.cpp.AF4DDF8D741EA296.idx  calibration.h.B1B86308FF53C40B.idx  cluster.h.BCD88AD74947CF32.idx  clusterer.h.AF18506373393F98.idx  current_device.h.7B0FDF76484A3859.idx  data_printer.h.3EEAC21DE97E2AC5.idx  data_reader.h.FA6199536379FAEA.idx  dataflow_controller.cpp.D0E98B311A34E396.idx  dataflow_controller.h.DB89DA3043FE7B87.idx  hit_sorter.h.B3241909DF9E6D29.idx  main.cpp.ECFF099CCFE40ECA.idx  mm_hit.cpp.A77BEBCA7C2058AD.idx  mm_hit.h.B74DF3FB52873AE8.idx  mm_stream.h.2A0DCE7D568A4AE9.idx  node_args.cpp.CE1F61D75DF846D3.idx  node_args.h.63323AA3BE8C8BA2.idx  node_package.h.284D4AF71018401B.idx  timepix3.h.7F344575737437FF.idx  utils.cpp.1EE75A38DD95FE55.idx  utils.h.CC886857F9F1DDED.idx
include/: burda_hit.h  burda_to_mm_hit_adapter.h  calibration.h  cluster.h  clusterer.h  data_printer.h  data_reader.h  hit_sorter.h  mm_hit.h  online_data_reader.h
include/data_flow/: dataflow_controller.h
include/data_structs/: burda_hit.h  calibration.h  cluster.h  mm_hit.h  node_args.h
include/devices/: current_device.h  timepix3.h
include/nodes/: burda_to_mm_hit_adapter.h  cluster_splitter.h  clusterer.h  data_printer.h  data_reader.h  hit_sorter.h  node_package.h  online_data_reader.h  raw_data_reader.h  temporal_clusterer.h
include/other/: comm.h  mm_stream.h  utils.h
src/: main.cpp
src/data_flow/: dataflow_controller.cpp
src/data_structs/: burda_hit.cpp  calibration.cpp  mm_hit.cpp  node_args.cpp
src/other/: utils.cpp
